deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["*.url.shinkeonkim.com"]
      secretName: url-shortener-tls
  rules:
    - host: "*.url.shinkeonkim.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener
                port: {name: http}
